# tether

./: .gitignore  CLAUDE.md  README.md  ROUTINE_PROTOCOL.md  config.example.yaml  pyproject.toml  specs.md  task-sequence.md
.claude/agents/: tether-guardrail-reviewer.md
.claude/skills/tether-build/: SKILL.md
cli/: __init__.py  tether_connect.py
deploy/: com.tether.routine.plist  com.tether.server.plist  install.sh  uninstall.sh
docs/: tech-stack.md
docs/ai-rules/: 00-process.md  01-guardrails.md  02-python-backend.md  03-frontend.md  README.md
routines/: reference_routine.py  shell_routine.py  start_work.py
scripts/: smoke.sh  tetherctl
server/: __init__.py  config.py  db.py  hub.py  main.py  protocol.py  uploads.py
tests/: conftest.py  test_auth.py  test_claiming.py  test_dirs.py  test_health.py  test_media.py  test_round_trip.py  test_sessions.py  test_widgets.py
web/: app.js  index.html  manifest.webmanifest  matrix.js  status.html  style.css  sw.js
